tests/negative/symbols/lowercase_type.orng
// lowercase_type.orng:5:10: error: symbol `int` of type `Type` must start with an uppercase letter
// const int: Type = (a: Int, b: Int)
//         ^
// 
const int: Type = (a: Int, b: Int)

fn main() -> Int {
    let x: int = (3, 4)
    x.a
}